# agmod-server

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  README.md
.github/workflows/: CI.yml
assets/: liblist.gam  server.cfg  startup_server.cfg  startup_server_ctf.cfg
assets/gamemodes/: arcade.cfg  arena.cfg  cbcup.cfg  ctf.cfg  ctf2.cfg  dom.cfg  ffa.cfg  ffax.cfg  hlccl.cfg  instagib.cfg  lms.cfg  lts.cfg  sgbow.cfg  tdm.cfg  tdm2.cfg  tdm3.cfg  tdm4.cfg  tdmx.cfg  tournament.cfg
assets/sprites/: hud.txt
assets/sprites/1280/ag_ctf/: ag_ctf_score.spr  icon_ctf_carry.spr  icon_ctf_home.spr  icon_ctf_lost.spr  icon_ctf_stolen.spr
assets/sprites/2560/ag_ctf/: ag_ctf_score.spr  icon_ctf_carry.spr  icon_ctf_home.spr  icon_ctf_lost.spr  icon_ctf_stolen.spr
cl_dll/: GameStudioModelRenderer_Sample.cpp  ammo.cpp  cdll_int.cpp  death.cpp  entity.cpp  hud.h  hud_benchtrace.cpp  hud_servers.cpp  hud_spectator.cpp  inputw32.cpp  menu.cpp  saytext.cpp  scoreboard.cpp  status_icons.cpp  statusbar.cpp  text_message.cpp  tf_defs.h  vgui_ScorePanel.cpp  vgui_TeamFortressViewport.cpp  vgui_TeamFortressViewport.h  voice_status.cpp
cl_dll/hl/: hl_baseentity.cpp  hl_objects.cpp  hl_weapons.cpp
cmake/: InstallAmxxOffsets.cmake.in
common/: Platform.h  const.h  crc.h  mathlib.h  parsemsg.cpp  port.h
dlls/: AI_BaseNPC_Schedule.cpp  Wxdebug.cpp  activity.h  activitymap.h  aflock.cpp  agadmin.cpp  agadmin.h  agadmincache.cpp  agadmincache.h  agarena.cpp  agarena.h  agclient.cpp  agclient.h  agcommand.cpp  agcommand.h  agctf.cpp  agctf.h  agdom.cpp  agdom.h  agflood.cpp  agflood.h  aggame.cpp  aggame.h  aggamemode.cpp  aggamemode.h  aggamerules.cpp  aggamerules.h  agglobal.cpp  agglobal.h  aginfointermission.cpp  aginfointermission.h  aglms.cpp  aglms.h  agmatch.cpp  agmatch.h  agrandom.cpp  agrunt.cpp  agscore.h  agscorecache.cpp  agscorecache.h  (+161 more)
dlls/wpn_shared/: hl_wpn_glock.cpp
engine/: APIProxy.h  cdll_int.h  eiface.h
game_shared/: bitvec.h  vgui_checkbutton2.cpp  voice_banmgr.cpp  voice_gamemgr.cpp  voice_status_hud.cpp
game_shared/bot/: bot.cpp  bot.h  bot_util.cpp  nav_node.h
gamedir/: CMakeLists.txt  startup_server_lms.cfg
gamedir/gamemodes/: arcade.cfg  arena.cfg  ctf.cfg  ctf2.cfg  dom.cfg  ffa.cfg  ffax.cfg  instagib.cfg  lms.cfg  lts.cfg  sgbow.cfg  tdm.cfg  tdm2.cfg  tdm3.cfg  tdm4.cfg  tdmx.cfg  tournament.cfg
linux/: Makefile  Makefile.agdll  Makefile.hl_cdll
pm_shared/: pm_debug.cpp  pm_defs.h  pm_math.cpp  pm_shared.cpp
projects/vs2019/: agdll.vcxproj  agdll.vcxproj.filters
public/: interface.cpp  interface.h
scripts/: .gitignore  FormatSrc.sh  package_target.py
src/common/: CMakeLists.txt  beamdef.h  cl_entity.h  com_model.h  con_nprint.h  const.h  crc.h  director_cmds.h  dlight.h  dll_state.h  entity_state.h  entity_types.h  in_buttons.h  interface.cpp  interface.h  ivoicetweak.h  net_api.h  nowin.h  parsemsg.h  pmtrace.h  qfont.h  r_efx.h  r_studioint.h  ref_params.h  screenfade.h  triangleapi.h  usercmd.h
src/engine/: APIProxy.h  cdll_int.h  custom.h  customentity.h  edict.h  eiface.h  progdefs.h  progs.h  shake.h  studio.h
src/game/server/: AI_BaseNPC_Schedule.cpp  AmxxOffsetClassList.txt  CMakeLists.txt  Wxdebug.cpp  activity.h  activitymap.h  aflock.cpp  agadmincache.cpp  agadmincache.h  agarena.cpp  agarena.h  agclient.cpp  agclient.h  agcommand.cpp  agcommand.h  agctf.cpp  agctf.h  agdom.cpp  agdom.h  agflood.cpp  agflood.h  aggame.cpp  aggame.h  aggamemode.cpp  aggamemode.h  aggamerules.cpp  aggamerules.h  agglobal.cpp  agglobal.h  aginfointermission.cpp  aginfointermission.h  aglms.cpp  aglms.h  agmatch.cpp  agmatch.h  agrandom.cpp  agrunt.cpp  agscore.cpp  agscorecache.cpp  agscorecache.h  (+159 more)
src/game/server/wpn_shared/: hl_wpn_glock.cpp
src/game/shared/: CMakeLists.txt  bitvec.h  voice_common.h
src/pm_shared/: pm_defs.h  pm_materials.h  pm_movevars.h  pm_shared.cpp  pm_shared.h
src/public/: keydefs.h  particleman.h  pman_particlemem.h  pman_triangleffect.h
src/public/cl_dll/: IGameClientExports.h
utils/makefont/: makefont.cpp
utils/makels/: makels.cpp
utils/procinfo/: procinfo.cpp
utils/qrad/: qrad.c
utils/serverctrl/: ServerCtrl.cpp  ServerCtrlDlg.cpp  ServerCtrlDlg.h
utils/smdlexp/: smdlexp.cpp  smedefs.h
